doesn't allow more then 1 ip per session!

--- a/site.conf
+++ b/site.conf
@@ -70,6 +70,7 @@ server {
         #Proxy
         keepalive_timeout   2;
         resolver            8.8.8.8;
+        limit_conn          addr 1;
         access_log          /var/log/nginx/pandadev.access full_xraw;
         error_log           /var/log/nginx/pandadev.error warn;
         proxy_pass          http://localhost:9898;
