Limited IP per conn, And MB/s
in case of connections, 
1 Visitor = 1IP // Drop If more ex open you srv from 2 TABs on chrome etc.
5MB/s From that ip // If goes + drop connection. as i have monitor ogarul and multiogar no one goes more than 5MB/s 
but well you can downgrade it to 3MB/s to get a fast server, keep in mind that if any1 will go bigger too much will get disconect!

--- a/site.conf
+++ b/site.conf
@@ -70,7 +70,8 @@ server {
         #Proxy
         keepalive_timeout   2;
         resolver            8.8.8.8;
-        limit_conn          addr 1;
+        limit_conn          addr 1; #Dosnt Allow More Then 1IP.
+        limit_rate          5000k; #5000K = 5MB/s if reached deny!.
         access_log          /var/log/nginx/pandadev.access full_xraw;
         error_log           /var/log/nginx/pandadev.error warn;
         proxy_pass          http://localhost:9898;
