don't allow empty user-agent!

--- a/site.conf
+++ b/site.conf
@@ -68,6 +68,8 @@ server {
         if ($browser-version = outdated) {
            return 444;
         }
+        
+        if ($http_user_agent = "") { return 444; }
 
         #Proxy, Forwarding ports.
         keepalive_timeout   2;
