--- a/site.conf
+++ b/site.conf
@@ -7,7 +7,8 @@ server {
         error_log          /home/game/logs/pandadev.error;
 
         location / {
-        #Headers!
+        #Headers! Those means your srv doesn't accept CROS Origin to inject style or anything else!
+        #Remove those 'add_header' if are running OgarServ!
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-Xss-Protection "1; mode=block";
