JaraLowell/OgarServ fix

--- a/site.conf
+++ b/site.conf
@@ -8,7 +8,6 @@ server {
 
         location / {
         #Headers! Those means your srv doesn't accept CROS Origin to inject style or anything else!
-        #Remove those 'add_header' if are running OgarServ!
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-Xss-Protection "1; mode=block";
@@ -16,6 +15,9 @@ server {
         add_header X-Server Alpha;
         add_header Content-Security-Policy "font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com";
         add_header Strict-Transport-Security "max-age=31536000; includeSubdomains; preload;";
+        # if you have a custom client uncoment line below and replace pandadev.net with your domain.
+        # As i know this is needed only when you are running JaraLowell/OgarServ
+        #add_header 'Access-Control-Allow-Origin' pandadev.net;
 
         #Geo Ban. Disallow Anonymous Proxy. And China! Sorry china.
         #List http://dev.maxmind.com/geoip/legacy/codes/iso3166/
